data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_422.wast
;; 3. **Test Description:**    - Design a test with a loop structure where `br` targets the same nested loop repeatedly. The condition for an exit should be embedded within a calculation that frequently changes.     - **Constraint:** This test aims to ensure the branch behaves correctly, like a `continue` statement, and does not create an infinite loop with incorrect operand handling or label lookup errors.

(assert_invalid
  (module
    (func (start 0)
      (loop $loop
        (i32.const 1)
        (i32.const 2)
        (i32.add)
        (br $loop)
      )
    )
  )
  "type mismatch"
)